# pane

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
pane/: commands.cc  commands.h  main.cc
src/pane/: fd.cc  fd.h  paths.h  runtime.cc  runtime.h  streambuf.cc  streambuf.h
src/pane/cli/: cli.cc  cli.h
src/pane/client/: client.cc  client.h  tui.cc  tui.h
src/pane/proto/: pane.capnp
src/pane/server/: client_connection.cc  client_connection.h  logging.cc  logging.h  pane.cc  pane.h  server.cc  server.h  session.cc  session.h  session_manager.cc  session_manager.h  window.cc  window.h
src/pane/unix_socket/: connection.cc  connection.h  server.cc  server.h  socket.cc  socket.h
src/teja/: cli.h  client.h  expect.h  fd.cc  fd.h  pane.h  paths.h  runtime.cc  runtime.h  server.cc  server.h  session.cc  session.h  streambuf.cc  streambuf.h  tile.h  unix_socket.cc  unix_socket.h
src/teja/cli/: cli.cc  cli.h
src/teja/client/: client.cc  client.h  tui.cc  tui.h
src/teja/proto/: teja.capnp
src/teja/server/: client_connection.cc  client_connection.h  logging.cc  logging.h  pane.cc  pane.h  server.cc  server.h  session.cc  session.h  session_manager.cc  session_manager.h  window.cc  window.h
src/teja/unix_socket/: connection.cc  connection.h  server.cc  server.h  socket.cc  socket.h
teja/: commands.cc  commands.h  main.cc
